# trading_bot

./: .env.example  .gitattributes  .gitignore  DELIVERY_PLAN.md  README.md  pyproject.toml  sparknotes.md
.github/scripts/: claude_resolve_conflicts.py  smart_merge_state.py
.github/workflows/: account-status.yml  archive-trim.yml  daily-news-brief.yml  dst-sync.yml  grade-predictions.yml  health-check.yml  midday-trail-uk-eu.yml  midday-trail-us.yml  midday-trail.yml  ohlcv-daily-update.yml  ohlcv-seed.yml  ohlcv-warmup.yml  pipeline-asia.yml  pipeline-uk-eu.yml  pipeline-us.yml  recover-t212-strands.yml  t212-smoke-test.yml  test-email.yml  tests.yml  weekly-evolution.yml  weekly-macro.yml
docs/: data.json  evolution.html  index.html
docs/assets/: style.css
scripts/: account_status.py  archive_old_editions.py  backtest.py  build_lse_ccy_map.py  correct_lse_scaling.py  health_check.py  ic_noise_floor.py  midday_trail.py  recover_alpaca_cancelled.py  recover_t212_strands.py  reflect_recovered_trades.py  retry_unknown_ccy.py  setup_cron_jobs.py  shadow_paper_calibration.py  t212_history_diag.py
state/: decision_log.jsonl  evolution.md  ledger.jsonl  lse_quote_ccy.json  predictions.jsonl  ticker_sectors.json  trail_exits.jsonl
tests/: conftest.py  test_backtest_grading.py  test_claude_extract.py  test_claude_retry.py  test_evolution_render.py  test_fees.py  test_history.py  test_ledger.py  test_llm_prompt_fmt.py  test_metrics.py  test_midday_take_profit.py  test_prefilter_sort_keys.py  test_shadow_entry_price.py  test_smart_merge_state.py  test_t212_to_gbp.py
(+530 files in other folders)
