[project]
name = "trading-bot"
version = "0.1.0"
description = "Self-improving LLM-driven stock trading bot, paper-only until graduation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "yfinance>=0.2.40",
    "pandas>=2.0",
    "numpy>=1.26",
    "lxml>=5.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "alpaca-py>=0.34",
    "pandas-market-calendars>=4.4",
    "markdown>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_bot"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
